# High-Performance-Trading-Order-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Logger.h  MatchingEngine.h  Order.h  OrderBook.h  Trade.h  Utils.h
src/: Logger.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  Trade.cpp  Utils.cpp
tests/: MatchingEngineTests.cpp  OrderBookTests.cpp
